--- a/dbexam.ipynb
+++ b/dbexam.ipynb
@@ -850,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"tablechamjo.jpg\">"
+    "![tablechamjo](./dbimage/tablechamjo.jpg)"
    ]
   },
   {
