--- a/dbexam.ipynb
+++ b/dbexam.ipynb
@@ -921,7 +921,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query1.jpg\">"
+    "![query1](./dbimage/query1.jpg)"
    ]
   },
   {
@@ -1024,7 +1024,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query2.jpg\">"
+    "![query2](./dbimage/query2.jpg)"
    ]
   },
   {
@@ -1112,7 +1112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query3.jpg\">"
+    "![query3](./dbimage/query3.jpg)"
    ]
   },
   {
@@ -1198,7 +1198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query4.jpg\">"
+    "![query4](./dbimage/query4.jpg)"
    ]
   },
   {
@@ -1279,7 +1279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query5.jpg\">"
+    "![query5](./dbimage/query5.jpg)"
    ]
   },
   {
@@ -1363,7 +1363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query6.jpg\">"
+    "![query6](./dbimage/query6.jpg)"
    ]
   },
   {
@@ -1445,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query7.jpg\">"
+    "![query7](./dbimage/query7.jpg)"
    ]
   },
   {
@@ -1527,7 +1527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query88.jpg\">"
+    "![query88](./dbimage/query88.jpg)"
    ]
   },
   {
@@ -1612,7 +1612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query99.jpg\">"
+    "![query99](./dbimage/query99.jpg)"
    ]
   },
   {
@@ -1703,7 +1703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query10.jpg\">"
+    "![query10](./dbimage/query10.jpg)"
    ]
   },
   {
@@ -1791,7 +1791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query11.jpg\">"
+    "![query11](./dbimage/query11.jpg)"
    ]
   },
   {
@@ -1913,7 +1913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query12.jpg\">"
+    "![query12](./dbimage/query12.jpg)"
    ]
   },
   {
@@ -1995,7 +1995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query13.jpg\">"
+    "![query13](./dbimage/query13.jpg)"
    ]
   },
   {
@@ -2182,7 +2182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query14.jpg\">"
+    "![query14](./dbimage/query14.jpg)"
    ]
   },
   {
@@ -2273,7 +2273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query15.jpg\">"
+    "![query15](./dbimage/query15.jpg)"
    ]
   },
   {
@@ -2362,7 +2362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query16.jpg\">"
+    "![query16](./dbimage/query16.jpg)"
    ]
   },
   {
@@ -2452,7 +2452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query17.jpg\">"
+    "![query17](./dbimage/query17.jpg)"
    ]
   },
   {
@@ -2558,7 +2558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query18.jpg\">"
+    "![query18](./dbimage/query18.jpg)"
    ]
   },
   {
@@ -2665,7 +2665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query19.jpg\">"
+    "![query19](./dbimage/query19.jpg)"
    ]
   },
   {
@@ -2773,7 +2773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query200.jpg\">"
+    "![query200](./dbimage/query200.jpg)"
    ]
   },
   {
@@ -2982,7 +2982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query21.jpg\">"
+    "![query21](./dbimage/query21.jpg)"
    ]
   },
   {
@@ -3094,7 +3094,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query22.jpg\">"
+    "![query22](./dbimage/query22.jpg)"
    ]
   },
   {
@@ -3208,7 +3208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"query23.jpg\">"
+    "![query23](./dbimage/query23.jpg)"
    ]
   },
   {
