--- a/dbexam.ipynb
+++ b/dbexam.ipynb
@@ -2665,7 +2665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![query19](./dbimage/query19.jpg)"
+    "![query19](./dbimage/query19.jpg.jpg)"
    ]
   },
   {
@@ -2773,7 +2773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![query200](./dbimage/query200.jpg)"
+    "![query20](./dbimage/query20.jpg)"
    ]
   },
   {
